glx/testdata/invalid/duplicate-ids/persons/person-duplicate.glx
persons:
  person-abc123:
    properties:
      given_name: "Duplicate"
      family_name: "Person"
